# muesli

./: .gitignore  engineer_spec.md  engineer_spec_2_swift_ui.md  engineer_spec_3.md  prd.md  someday-maybe.md  todo-io-scalability-fix.md  todo-meeting-history.md  todo-speaker-identification.md  todo.md
backend/: muesli_backend_demo.py
backend/fast_mac_transcribe_diarise_local_models_only/: .gitignore  README.md  pyproject.toml  skill.md
backend/fast_mac_transcribe_diarise_local_models_only/scripts/: test_io_scalability.py
backend/fast_mac_transcribe_diarise_local_models_only/skill/: SKILL.md
backend/fast_mac_transcribe_diarise_local_models_only/src/diarise_transcribe/: __init__.py  __main__.py  asr.py  audio.py  cli.py  constants.py  diarisation.py  merge.py  muesli_backend.py  recovery.py  reprocess.py  senko_diarisation.py
backend/fast_mac_transcribe_diarise_local_models_only/tests/: test_asr.py  test_muesli_backend_live_asr_only.py  test_recovery.py  test_reprocess_recovery.py  test_reprocess_sessions.py  test_senko_diarisation.py  test_write_aligned_audio.py
design/: 2026-05-29 - mic-aec-redesign.md  _build-overlay.md
docs/: prd-meeting-history.md
engineer-notes/: audio-device-audit-2026-06-25.md  batch-rediarization-phase0-overview.md  batch-rediarization-phase1-backend-cli.md  batch-rediarization-phase2-actor.md  batch-rediarization-phase3-1-ui.md  bug-duplicate-segments.md  bug-segments-disappearing-wrong-order-notes.md  bug-segments-disappearing-wrong-order.md  bug-segments-race-condition-fix-notes.md  bug-segments-race-condition-fix.md  (+39 more)
(+124 files in other folders)
